show user the marks

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class="container">
+    <div>Punctuation marks: <span id="punctuation_marks_list"></span></div>
     <div><span>Paste your text here </span></div>
     <div>
 
